--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -15,8 +15,8 @@ theme:
 
   # pretty colors! see https://squidfunk.github.io/mkdocs-material/getting-started/#primary-colors
   palette:
-    primary: 'brown'
-    accent: 'amber'
+    primary: 'amber'
+    accent: 'brown'
   
   # fun logos! see https://material.io/icons/
   icon:
