fix doc folder ref

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,7 +7,7 @@ edit_uri: ""
 #copyright: 'Copyright &copy; 2020 <a href="http://ivory.idyll.org/lab/">Lab for Data Intensive Biology</a> at UC Davis'
 
 # change directory names here
-docs_dir: doc
+docs_dir: docs
 site_dir: site
 
 theme:
